Your commit message

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Email</p>
+              <a  class="contact-link">moosmantv@gmail.com</a>
             </div>
           </li>
 
@@ -91,7 +92,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+201203464574" class="contact-link">+20 120 3464 574</a>
+              <a  class="contact-link">+20 120 3464 574</a>
             </div>
           </li>
           <!--
