--- a/index.html
+++ b/index.html
@@ -897,6 +897,107 @@
           <ul class="project-list">
 
          
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://www.figma.com/design/m8PgwS3hAm7zTdMMewQHyg/Real-Estate-SaaS-Web-and-Mobile?node-id=1-2&t=E7xKdu4H2TqtGT33-1" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/Thumbnail12.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Real Estate SaaS Web and Mobile</h3>
+
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://astro-theme-stone.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/image.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title"> SaaS Web </h3>
+
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://www.openassistantgpt.io/en" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/gg.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title"> OpenAssistantGPT </h3>
+
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://saasstellar.nader.run/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/nn.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title"> Simplicity-SaaSStellar </h3>
+
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://mern-store-gold.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/aa.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title"> Fullstack MERN Ecommerce Application </h3>
+
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://www.figma.com/design/wCXnVHyl6IGw3aMTrAlH4T/SaaS-Landing-Page?node-id=9-100&t=zEq4z8zZq0GfYacG-1" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/Logo.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">SaaS Landing Page </h3>
+
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="web scraping">
               <a href="https://my-project-xi-olive.vercel.app/050%20coffee-master/" target="_blank">
@@ -1076,6 +1177,23 @@
 
               </a>
             </li> 
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://www.figma.com/design/gITE9Js9QQJnxSVxxJt44h/SaaS-Website-UI?node-id=2012-941&t=AvQvRz77KqzjMiCC-1" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/Thumbnail.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">                                 SaaS Website UI </h3>
+
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="python software engineering">
               <a href="https://myfanssmm.com/" target="_blank">
 
