Update logistics dashboard link

--- a/index.html
+++ b/index.html
@@ -914,6 +914,44 @@
               </a>
             </li>
 
+
+            
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://logistics-elizaos.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/13.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Logistics Dashboard  </h3>
+
+
+              </a>
+            </li>
+
+
+            
+            <li class="project-item  active" data-filter-item data-category="web scraping">
+              <a href="https://ipi-logistics-dashboard.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/img/14.png" alt="Alibaba Products" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">logistics-dashboard</h3>
+
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="web scraping">
               <a href="https://astro-theme-stone.vercel.app/" target="_blank">
 
@@ -949,7 +987,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web scraping">
-              <a href="https://saasstellar.nader.run/" target="_blank">
+              <a href="https://ssasstellar.vercel.app/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
