Update portfolio content

--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 </figure>
 
                 <h3 class="project-title">Real Estate SaaS Web and Mobile</h3>
-
+                <p class="project-description">منصة عقارات متكاملة تتيح للمستخدمين البحث وإدارة العقارات بسهولة مع واجهة مستخدم عصرية</p>
 
               </a>
             </li>
@@ -927,8 +927,8 @@
                   <img src="./assets/img/13.png" alt="Alibaba Products" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Logistics Dashboard  </h3>
-
+                <h3 class="project-title">Logistics Dashboard</h3>
+                <p class="project-description">لوحة تحكم متطورة لإدارة الخدمات اللوجستية وتتبع الشحنات مع تحليلات متقدمة</p>
 
               </a>
             </li>
@@ -947,7 +947,7 @@
                 </figure>
 
                 <h3 class="project-title">logistics-dashboard</h3>
-
+                <p class="project-description">لوحة تحكم متكاملة للخدمات اللوجستية مع واجهة مستخدم سهلة وتحليلات تفصيلية للشحنات</p>
 
               </a>
             </li>
@@ -964,7 +964,7 @@
                 </figure>
 
                 <h3 class="project-title"> SaaS Web </h3>
-
+                <p class="project-description">منصة برمجيات كخدمة مع واجهة مستخدم سلسة وميزات متقدمة للأعمال</p>
 
               </a>
             </li>
@@ -981,7 +981,7 @@
                 </figure>
 
                 <h3 class="project-title"> OpenAssistantGPT </h3>
-
+                <p class="project-description">مساعد ذكي يعتمد على الذكاء الاصطناعي لتقديم المساعدة والإجابة عن الاستفسارات</p>
 
               </a>
             </li>
@@ -998,7 +998,7 @@
                 </figure>
 
                 <h3 class="project-title"> Simplicity-SaaSStellar </h3>
-
+                <p class="project-description">منصة SaaS بتصميم بسيط وأنيق مع أدوات قوية لإدارة الأعمال</p>
 
               </a>
             </li>
@@ -1015,7 +1015,7 @@
                 </figure>
 
                 <h3 class="project-title"> Fullstack MERN Ecommerce Application </h3>
-
+                <p class="project-description">متجر إلكتروني متكامل مبني بتقنية MERN مع نظام إدارة منتجات وسلة تسوق</p>
 
               </a>
             </li>
@@ -1032,7 +1032,7 @@
                 </figure>
 
                 <h3 class="project-title">SaaS Landing Page </h3>
-
+                <p class="project-description">صفحة هبوط احترافية لخدمات SaaS مع تصميم عصري وتجربة مستخدم مميزة</p>
 
               </a>
             </li>
@@ -1049,7 +1049,7 @@
                 </figure>
 
                 <h3 class="project-title">COFFEE website</h3>
-
+                <p class="project-description">موقع متجر قهوة متكامل مع تصميم جذاب وواجهة سهلة الاستخدام</p>
 
               </a>
             </li>
@@ -1066,7 +1066,7 @@
                 </figure>
 
                 <h3 class="project-title">A Digital Agency Of Inteligents & Creative People </h3>
-
+                <p class="project-description">موقع وكالة رقمية احترافي يعرض الخدمات والمشاريع بطريقة إبداعية</p>
 
               </a>
             </li>
@@ -1101,8 +1101,8 @@
                   <img src="./assets/img/6.jpg" alt="FiFa 24 Players" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Dtox  Take Control of your Project and Team </h3>
-
+                <h3 class="project-title">Dtox - Take Control of your Project and Team </h3>
+                <p class="project-description">منصة لإدارة المشاريع والفرق مع أدوات متقدمة للتحكم والمتابعة</p>
 
               </a>
             </li>
@@ -1119,8 +1119,8 @@
                   <img src="./assets/img/8.jpg" alt="Alibaba Products" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">patrix</h3>
-
+                <h3 class="project-title">Patrix</h3>
+                <p class="project-description">موقع شخصي احترافي مع معرض أعمال وخدمات مميز</p>
 
               </a>
             </li>
@@ -1138,7 +1138,7 @@
                 </figure>
 
                 <h3 class="project-title"> Makaan Find A Perfect Home To Live With Your Family </h3>
-
+                <p class="project-description">منصة عقارات متطورة للبحث عن المنازل المثالية مع ميزات بحث متقدمة</p>
 
               </a>
             </li>
@@ -1156,7 +1156,7 @@
                 </figure>
 
                 <h3 class="project-title">We Create Amazing Architecture Designs</h3>
-
+                <p class="project-description">موقع تصميم معماري يعرض المشاريع والتصاميم بأسلوب احترافي</p>
 
               </a>
             </li>
@@ -1174,7 +1174,7 @@
                 </figure>
 
                 <h3 class="project-title">Fast Food Restaurant</h3>
-
+                <p class="project-description">موقع مطعم وجبات سريعة مع نظام طلب وحجز إلكتروني متكامل</p>
 
               </a>
             </li>
@@ -1192,7 +1192,7 @@
                 </figure>
 
                 <h3 class="project-title">Within a few clicks, find meals thatare accessible near you</h3>
-
+                <p class="project-description">تطبيق للبحث عن المطاعم والوجبات القريبة مع نظام حجز سهل</p>
 
               </a>
             </li>
@@ -1211,7 +1211,7 @@
                 </figure>
 
                 <h3 class="project-title">Travel, enjoy and live a new and full life</h3>
-
+                <p class="project-description">موقع سياحة وسفر يقدم تجارب فريدة وعروض سفر مميزة</p>
 
               </a>
             </li> 
@@ -1227,7 +1227,7 @@
                 </figure>
 
                 <h3 class="project-title">                                 SaaS Website UI </h3>
-
+                <p class="project-description">تصميم واجهة مستخدم لموقع SaaS مع تجربة مستخدم سلسة وجذابة</p>
 
               </a>
             </li>
@@ -1244,7 +1244,7 @@
                 </figure>
 
                 <h3 class="project-title">myfanssmm</h3>
-
+                <p class="project-description">منصة إدارة وسائل التواصل الاجتماعي مع أدوات تسويق متقدمة</p>
 
               </a>
             </li> 
