--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <!-- <title>Mohamed Osman - Personal Portfolio</title> -->
   <meta property="og:title" content="Mohamed Osman's Portfolio">
   <title>Mohamed Osman Portfolio</title>
-  <meta property="og:description" content="software engineer from alexandria, Egypt.">
+  <meta property="og:description" content="Mohamed Osman - Front-End Developer and UI/UX Designer specializing in creating responsive web applications and intuitive interfaces.">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Mohamed Osman's Portfolio">
-  <meta property="og:image:width" content="12000">
-  <meta property="og:image:height" content="6300">
+  <meta property="og:image" content="./assets/img/22.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="description" content="Mohamed Osman - Front-End Developer and UI/UX Designer from Alexandria, Egypt. Specializing in HTML, CSS, JavaScript and AWS cloud services.">
 
   <!-- Twitter Card tags (optional) -->
   <meta name="twitter:card" content="summary_large_image">
@@ -55,7 +57,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="/assets/img/22.jpg" alt="Mohamed Osman" width="80">
+          <img src="/assets/img/22.jpg" alt="Mohamed Osman - Front-End Developer and UI/UX Designer" width="80">
         </figure>
 
         <div class="info-content">
